--- a/src/signup/css/login.css
+++ b/src/signup/css/login.css
@@ -63,8 +63,8 @@
     font-weight: normal;
     color: #474C66;
     vertical-align: middle;
-  	padding-left: 20px;
-  	padding-right: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .gpii-signup-tab1 .gpii-signup-headerImage:before {
@@ -96,9 +96,9 @@
     background-color: #F2F2F2;
     color: #474C66;
     vertical-align: middle;
-  	padding: 3px;
-  	display: inline-block;
-  	height: 1.08em;
+    padding: 3px;
+    display: inline-block;
+    height: 1.08em;
 }
 
 .gpii-signup-tab1 .gpii-signup-username .gpii-login-textfield-icon:before {
@@ -127,9 +127,9 @@ input[type=checkbox]:checked + label > .gpii-signup-checkbox-icon:before {
     font-weight: normal;
     background-color: #FFFFFF;
     vertical-align: middle;
-  	padding: 0px;
-  	display: inline-block;
-  	height: 1em;
+    padding: 0px;
+    display: inline-block;
+    height: 1em;
 }
 
 .gpii-signup-tab1 .gpii-signup-passwd .gpii-signup-password-icon:before, .gpii-signup-tab1 .gpii-signup-cpasswd .gpii-signup-password-icon-match:before, .gpii-signup-tab1 .gpii-signup-username .gpii-signup-username-icon-available:before {
@@ -193,7 +193,7 @@ div.gpii-signup-tabs section {
     height: 23em;
     padding: 20px 30px 20px 30px;
     background-color: #FFFFFF;
-    border-radius:	0px;
+    border-radius: 0px;
     box-shadow: 5px 5px 10px rgba(0,0,0,0.1);
     z-index: 0;
 }
@@ -252,7 +252,7 @@ div.gpii-signup-tabs section:target h2 {
 }
 
 div.gpii-signup-tabs section:target h2 {
-    border-radius:	0px;
+    border-radius: 0px;
     box-shadow: 5px 0px 10px rgba(0,0,0,0.1);
 }
 
@@ -331,16 +331,6 @@ div.gpii-signup-tabs section h2 {
     display: inline;	
 }
 
-/*
-.login-label {
-	font-weight: normal;
-	font-family: Courier New;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	display: block;
-	width: inherit;
-}
-*/
 .gpii-signup-login-label {
     text-align: left;
 }
@@ -468,7 +458,7 @@ a#termsLink{
     border-radius: 1px;
     box-shadow: 5px 5px 10px rgba(0,0,0,0.1);
     text-align: center;
-    z-index: 11; /* 1px higher than the overlay layer */
+    z-index: 11;
 }
 
 .gpii-signup-recovery {
