--- a/src/signup/css/login.css
+++ b/src/signup/css/login.css
@@ -50,37 +50,22 @@
     The font icons
 */
 
-.gpii-signup-headerImage {
+.gpii-signup-icon {
     -webkit-font-smoothing: antialiased;
-    width: 130px; 
-    margin: 0px;
-    border-top: 5px solid #F2F2F2;
+    width: 30px;
     display: table;
 }
 
-.gpii-signup-headerImage:before {
-    font-size: 60px;
+.gpii-signup-icon:before {
+    font-size: 2.2em;
     font-weight: normal;
+    background-color: #F2F2F2;
     color: #474C66;
     vertical-align: middle;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-.gpii-signup-tab1 .gpii-signup-headerImage:before {
-    content: "\e64e";
-}
-
-.gpii-signup-tab2 .gpii-signup-headerImage:before {
-    content: "\e667";
-}
-
-.gpii-signup-tab3 .gpii-signup-headerImage:before {
-    content: "\e66f";
-}
-
-.gpii-signup-tab4 .gpii-signup-headerImage:before {
-    content: "\e662";
+    padding: 0.1em;
+    margin-top: 0.7em;
+    display: inline-block;
+    height: 1.08em;
 }
 
 .gpii-login-textfield-icon {
@@ -101,11 +86,11 @@
     height: 1.08em;
 }
 
-.gpii-signup-tab1 .gpii-signup-username .gpii-login-textfield-icon:before {
+.gpii-signup-account .gpii-signup-username .gpii-login-textfield-icon:before, .gpii-signup-head .gpii-signup-icon:before {
     content: "\e661";
 }
 
-.gpii-signup-tab1 .gpii-signup-passwd .gpii-login-textfield-icon:before, .gpii-signup-tab1 .gpii-signup-cpasswd .gpii-login-textfield-icon:before {
+.gpii-signup-account .gpii-signup-passwd .gpii-login-textfield-icon:before, .gpii-signup-account .gpii-signup-cpasswd .gpii-login-textfield-icon:before {
     content: "\e65d";
 }
 
@@ -132,12 +117,16 @@ input[type=checkbox]:checked + label > .gpii-signup-checkbox-icon:before {
     height: 1em;
 }
 
-.gpii-signup-tab1 .gpii-signup-passwd .gpii-signup-password-icon:before, .gpii-signup-tab1 .gpii-signup-cpasswd .gpii-signup-password-icon-match:before, .gpii-signup-tab1 .gpii-signup-username .gpii-signup-username-icon-available:before {
+.gpii-signup-account .gpii-signup-passwd .gpii-signup-password-icon:before, .gpii-signup-account .gpii-signup-cpasswd .gpii-signup-password-icon-match:before, .gpii-signup-account .gpii-signup-username .gpii-signup-username-icon-available:before {
     content: "\e638";
 }
 
-.gpii-signup-tab1 .gpii-signup-cpasswd .gpii-signup-password-icon-donotmatch:before, .gpii-signup-password-icon-short:before, .gpii-signup-tab1 .gpii-signup-username .gpii-signup-username-icon-notavailable:before {
+.gpii-signup-account .gpii-signup-cpasswd .gpii-signup-password-icon-donotmatch:before {
     content: "\e639";
+}
+
+.gpii-signup-password-icon-short:before, .gpii-signup-account .gpii-signup-username .gpii-signup-username-icon-notavailable:before {
+    content: "\e63b";
 }
 
 /*
@@ -172,100 +161,42 @@ input[type=checkbox] {
     width: 600px;
     height: 800px;
     margin: 1em auto;
-    border-radius: 5px;
+    border-radius: 0.4em;
 }
 
-div.gpii-signup-tabs {
+div.gpii-signup-form {
     position: relative;
     display: block;
     width: 520px;
     height: 420px;
-    margin: 1em auto;
-    top: 100px;
+    margin: 0.5em auto;
+    top: 50px;
+    border-top: 0.5em solid #00AAAA;
 }
 
-div.gpii-signup-tabs section {
+div.gpii-signup-form section {
     position: absolute;
     display: block;
     top: 0em;
     left: 0;
     width: 460px;
     height: 23em;
-    padding: 20px 30px 20px 30px;
+    padding: 40px 30px 30px 30px;
     background-color: #FFFFFF;
     border-radius: 0px;
     box-shadow: 5px 5px 10px rgba(0,0,0,0.1);
     z-index: 0;
 }
 
-div.gpii-signup-tabs section:first-child {
+div.gpii-signup-form section:first-child {
     z-index: 1;
 }
 
-div.gpii-signup-tabs section h2 {
-    position: absolute;
-    font-size: 1em;
-    font-weight: normal;
-    width: 130px;
-    top: -5.94em;
-    left: 0px;
-    padding: 0;
-    margin: 0;
-    color: #999;
-    background-color: #F2F2F2;
-    border-radius: 0 0 0 0;
-}
-
-div.gpii-signup-tabs section:nth-child(2) h2 {
-    left: 130px;
-}
-
-div.gpii-signup-tabs section:nth-child(3) h2 {
-    left: 260px;
-}
-
-div.gpii-signup-tabs section:nth-child(4) h2 {
-    left: 390px;
-}
-
-div.gpii-signup-tabs section h2 a {
-    display: block;
-    width: 100%;
-    line-height: 1.86;
-    text-align: center;
-    text-decoration: none;
-    color: black;
-    outline: 0 none;
-    vertical-align: middle;
-}
-
-div.gpii-signup-tabs .gpii-signup-icon-text {
+div.gpii-signup-form .gpii-signup-icon-text {
     font-family: "Courier-new";
 }
 
-div.gpii-signup-tabs section:target, 
-div.gpii-signup-tabs section:target h2 {
-    color: black;
-    background-color: #FFFFFF;
-    font-weight: normal;
-    z-index: 2;
-}
-
-div.gpii-signup-tabs section:target h2 {
-    border-radius: 0px;
-    box-shadow: 5px 0px 10px rgba(0,0,0,0.1);
-}
-
-div.gpii-signup-tabs section:target .gpii-signup-headerImage {
-    -webkit-font-smoothing: antialiased;
-    width: 130px; 
-    margin: 0px;
-    border-top: 5px solid #00AAAA;
-    display: table;
-}
-
-div.gpii-signup-tabs section,
-div.gpii-signup-tabs section h2 {
+div.gpii-signup-form section {
     -webkit-transition: all 500ms ease;
     -moz-transition: all 500ms ease;
     -ms-transition: all 500ms ease;
@@ -299,9 +230,9 @@ div.gpii-signup-tabs section h2 {
     font-family: Verdana;
     font-size: 1em;
     float: right;
-    margin-right: 40px;
+    margin-right: 0.6em;
     height: 1.5em;
-    bottom: -120px;
+    bottom: -5em;
     background-color: inherit;
     color: #474C66;
 }
@@ -314,8 +245,8 @@ div.gpii-signup-tabs section h2 {
     background-color: #00AAAA;
     width: inherit;
     height: 3em;
-    bottom: -160px;
-    border-radius: 0px 0px 5px 5px;
+    bottom: -11.2em;
+    border-radius: 0px 0px 0.4em 0.4em;
 }
 
 .gpii-signup-login-h3 {
@@ -328,7 +259,8 @@ div.gpii-signup-tabs section h2 {
     font-family: Courier New;
     font-size: 1.0em;
     line-height: 0em;
-    display: inline;	
+    display: inline;
+    color: #000000;
 }
 
 .gpii-signup-login-label {
@@ -338,7 +270,7 @@ div.gpii-signup-tabs section h2 {
 .gpii-signup-passwd-header, .gpii-signup-cpasswd-header, .gpii-signup-username-header {
     font-weight: normal;
     font-family: Courier New;
-    font-size: 0.95em;
+    font-size: 0.9em;
     padding-top: 10px;
     padding-bottom: 10px;
     display: block;
@@ -414,7 +346,7 @@ a#termsLink{
     background-color: #474C66;
     color: white;
     border: 0px;
-    border-radius: 5px;
+    border-radius: 0.3em;
     cursor: pointer;
 }
 
@@ -442,7 +374,7 @@ a#termsLink{
     opacity: 0.8;
     z-index: 10;
     margin: 0em auto;
-    border-radius: 5px;
+    border-radius: 0.4em;
 }
 
 .gpii-signup-modal {
@@ -526,7 +458,7 @@ a#termsLink{
     background-color: #474C66;
     color: white;
     border: 0px;
-    border-radius: 5px;
+    border-radius: 0.3em;
     cursor: pointer;
 }
 
@@ -552,30 +484,33 @@ a#termsLink{
     cursor: default;
 }
 
-#tab1 .gpii-signup-password-short {
+#account .gpii-signup-password-short {
     color: #FF0000;
 }
 
-#tab1 .gpii-signup-password-weak {
+#account .gpii-signup-password-weak {
     color: orange;
 }
 
-#tab1 .gpii-signup-password-good {
+#account .gpii-signup-password-good {
     color: #2D98F3;
 }
 
-#tab1 .gpii-signup-password-very-good {
+#account .gpii-signup-password-very-good {
     color: blue;
 }
 
-#tab1 .gpii-signup-password-strong, #tab1 .gpii-signup-match, #tab1 .gpii-signup-available {
+#account .gpii-signup-password-strong, #account .gpii-signup-match, #account .gpii-signup-available {
     color: #20C857;
 }
 
-#tab1 .gpii-signup-donotmatch, #tab1 .gpii-signup-notavailable {
-    color: #FF0000;
+#account .gpii-signup-donotmatch {
+    color: #FFA500;
 }
 
+#account .gpii-signup-notavailable {
+    color: #FF0000;
+}
 .gpii-signup-passwd-header .gpii-signup-passwd-description, .gpii-signup-cpasswd-header .gpii-signup-passwd-description, .gpii-signup-username-header .gpii-signup-username-description {
     float: right;
     padding-right: 10px;
