GPII-947: Adding login link to sign up page. Renaming css and json files of sign up application.

--- a/src/login/css/login.css
+++ b/src/login/css/login.css
@@ -220,6 +220,7 @@ div.gpii-login-form section {
 .gpii-login-link {
     font-family: Courier New;
     font-weight: bold;
+    color: #474C66;
 }
 
 .gpii-login-tail {
