--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -82,9 +82,10 @@ h2 > label {
     -webkit-font-smoothing: antialiased;
     width: calc(17% - 2px);
     margin: 0px !important;
-    color: white;
-    background-color: #566374;
-    border: 1px solid #566374;
+    color: #566374;
+    background-color: #FFFFFF;
+    border: 3px solid #566374;
+    border-right: 0px;
     display: table;
 }
 
@@ -136,13 +137,14 @@ input[type=checkbox]:checked + .gpii-prefsEditor-headerImage > .gpii-prefsEditor
     color: white;
     font-size: 1.8em !important;
     display: table-cell;
-    color: #FFFFFF;
+    color: #566374;
     float: none;
     vertical-align: middle;
     width: 250px;
     height: 90px;
-    background-color: #566374;
-    border: 1px solid #566374;
+    background-color: #FFFFFF;
+    border: 3px solid #566374;
+    border-left: 0px;
     padding-right: 230px;
 }
 
@@ -179,7 +181,7 @@ input[type=checkbox], input[type=radio] {
     width:1px;
     margin:-1px;
     padding:0;
-    border:0; 
+    border:0;
 }
 
 /*
@@ -1459,7 +1461,7 @@ input[type=checkbox] + label.gpii-checkbox-label {
     margin-top: -3px;
     margin-left: 7px;
     font-size: 80px;
-    color: white;
+    color: rgb(85, 98, 115);
 }
 
 .visualAlternatives-header-icon:before {
@@ -1573,7 +1575,7 @@ label.gpii-preset-button-label {
 .universalLanguage > .gpii-dropdown, .textHighlighting  > .gpii-dropdown, .screenReaderLanguage > .gpii-dropdown {
     width: 14em;
     overflow: hidden;
-    padding-top: 0.5em; 
+    padding-top: 0.5em;
     padding-bottom: 0.5em;
     font-size: 1em;
 }
@@ -1618,11 +1620,11 @@ span.gpii-preset-button-label {
     position: absolute;
     padding-left: 90px;
     padding-top: 31px;
-    color: white;
-    background-color: rgb(85, 98, 115);
-    border: 1px solid rgb(85, 98, 115);
-    width: 444px;
-    height: 59px;
+    color: rgb(85, 98, 115);
+    background-color: #FFFFFF;
+    border: 3px solid rgb(85, 98, 115);
+    width: 440px;
+    height: 55px;
     text-align: left;
     font-family: 'Roboto Slab', serif;
     font-size: 1.4em!important;
