--- a/tests/components/textfieldStepper/html/textfieldStepper-Test.html
+++ b/tests/components/textfieldStepper/html/textfieldStepper-Test.html
@@ -2,24 +2,24 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Preferences Editors tests</title>
+        <title>Text field stepper tests</title>
 
-        <link rel="stylesheet" media="screen" href="../lib/qunit/qunit/css/qunit.css" />
+        <link rel="stylesheet" media="screen" href="../../../lib/qunit/qunit/css/qunit.css" />
 
-        <script src="../lib/qunit/qunit/js/qunit.js"></script>
-        <script src="../../src/shared/lib/infusion/infusion-prefsFramework.js"></script>
-        <script src="../lib/infusion/jqUnit/js/jqUnit.js"></script>
-        <script src="../lib/infusion/utils/js/IoCTestUtils.js"></script>
+        <script src="../../../lib/qunit/qunit/js/qunit.js"></script>
+        <script src="../../../../src/shared/lib/infusion/infusion-prefsFramework.js"></script>
+        <script src="../../../lib/infusion/jqUnit/js/jqUnit.js"></script>
+        <script src="../../../lib/infusion/utils/js/IoCTestUtils.js"></script>
 
         <!-- Preferences Editors specific files go here: -->
-        <script src="../../src/shared/common/ariaUtility.js"></script>
-        <script src="../../src/shared/components/textfieldStepper/js/textfieldStepper.js"></script>
+        <script src="../../../../src/shared/common/ariaUtility.js"></script>
+        <script src="../../../../src/shared/components/textfieldStepper/js/textfieldStepper.js"></script>
         <!-- Test specific files go here: -->
         <script src="../js/textfieldStepperTests.js"></script>
     </head>
 
     <body id="body">
-        <h1 id="qunit-header">Preferences Editors tests</h1>
+        <h1 id="qunit-header">Text field stepper tests</h1>
         <h2 id="qunit-banner"></h2>
         <div id="qunit-testrunner-toolbar"></div>
         <h2 id="qunit-userAgent"></h2>
