GPII-1014: Added the feature for the text field stepper to use up and down arrow keys to adjust its value. Also added the help hint of the new feature.

--- a/tests/components/textfieldStepper/html/textfieldStepper-Test.html
+++ b/tests/components/textfieldStepper/html/textfieldStepper-Test.html
@@ -8,6 +8,7 @@
 
         <script src="../../../../src/shared/lib/infusion/infusion-prefsFramework.js"></script>
         <script src="../../../lib/infusion/lib/qunit/js/qunit.js"></script>
+        <script src="../../../lib/infusion/lib/jquery-ui/js/jquery.simulate.js"></script>
         <script src="../../../lib/infusion/test-core/jqUnit/js/jqUnit.js"></script>
         <script src="../../../lib/infusion/test-core/utils/js/IoCTestUtils.js"></script>
 
