--- a/tests/components/textfieldStepper/html/textfieldStepper-Test.html
+++ b/tests/components/textfieldStepper/html/textfieldStepper-Test.html
@@ -29,7 +29,7 @@
         <!-- Test HTML -->
         <div class="gpiic-textfieldStepper">
             <span class="gpiic-textfieldStepper-decrement"></span>
-            <input type="text" class="gpiic-textfieldStepper-valueField">
+            <input type="number" class="gpiic-textfieldStepper-valueField">
             <span class="gpiic-textfieldStepper-unitField"></span>
             <span class="gpiic-textfieldStepper-increment"></span>
         </div>
