GPII-1023: Creation of auto adjust JSON files. Fixing identifier in autoAdjust HTML template.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -1627,3 +1627,10 @@ span.gpii-preset-button-label {
     font-family: 'Roboto Slab', serif;
     font-size: 1.4em!important;
 }
+
+.gpii-onOffSwitch-onOff {
+    display: inline;
+    float: right !important;
+    font-size: 70% !important;
+    margin-left: 37px;
+}
