GPII-1014: Use <button> for increase and decrease buttons in text field steppers.

--- a/tests/components/textfieldStepper/html/textfieldStepper-Test.html
+++ b/tests/components/textfieldStepper/html/textfieldStepper-Test.html
@@ -28,10 +28,10 @@
 
         <!-- Test HTML -->
         <div class="gpiic-textfieldStepper">
-            <span class="gpiic-textfieldStepper-decrement"></span>
+            <button class="gpiic-textfieldStepper-decrement"></button>
             <input type="number" class="gpiic-textfieldStepper-valueField">
             <span class="gpiic-textfieldStepper-unitField"></span>
-            <span class="gpiic-textfieldStepper-increment"></span>
+            <button class="gpiic-textfieldStepper-increment"></button>
         </div>
     </body>
 </html>
