--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -281,14 +281,13 @@ input[type=checkbox], input[type=radio] {
 .gpii-stepper-buttons {
     background-color: rgba(0, 0, 0, 0);
     cursor: pointer;
-    display: inline-block !important;
     float: left;
     font-size: 3em !important;
     height: 1.15em;
-    margin-top: -0.15em;
+    margin-top: -0.25em;
     position: relative;
-    text-align: center !important;
     width: 10% !important;
+    border: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
